# fips-tcp

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SMOLTCP_REFERENCE.md
protocol/: tcp-fips-v1.md  wire-vectors.json
rust/: Cargo.toml
rust/fips-tcp/: Cargo.toml
rust/fips-tcp-endpoint/: Cargo.toml
rust/fips-tcp-endpoint/src/: lib.rs
rust/fips-tcp-endpoint/tests/: endpoint.rs
rust/fips-tcp-fips/: Cargo.toml
rust/fips-tcp-fips/src/: lib.rs
rust/fips-tcp-fips/tests/: endpoint.rs
rust/fips-tcp/src/: connection_reset.rs  connection_types.rs  lib.rs  marker.rs  reno.rs  rtt.rs  segment.rs  seq.rs  stack.rs  stack_abort.rs  stack_marker.rs  stack_types.rs  types.rs  wire.rs
rust/fips-tcp/tests/: limits_and_reset.rs  source_size.rs  state_machine.rs  wire_vectors.rs
rust/interop-driver/: Cargo.toml
rust/interop-driver/src/: main.rs
rust/smoltcp-oracle/: Cargo.toml
rust/smoltcp-oracle/src/: lib.rs
rust/smoltcp-oracle/tests/: interop.rs
ts/: package.json  pnpm-lock.yaml  tsconfig.json
ts/src/: connection-types.ts  connection.ts  fips.ts  index.ts  marker.ts  persist.ts  reno.ts  reset.ts  rtt.ts  segment.ts  seq.ts  stack.ts  types.ts  wire.ts
ts/test/: fips-endpoint.test.ts  fips-node.test.ts  limits-and-reset.test.ts  rust-interop.test.ts  send-marker.test.ts  source-size.test.ts  state-machine.test.ts  wire-vectors.test.ts
