[package]
name = "fips-tcp"
version = "0.2.0"
description = "TCP reliable streams over authenticated FIPS datagrams"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
